# ocelot

./: .dockerignore  .envrc  .gitignore  Cargo.toml  README.md  flake.nix  treefmt.toml
.github/workflows/: container.yaml  lints.yaml  nix.yaml  release.yaml  rust.yaml
crates/entry/: Cargo.toml
crates/entry/src/: error.rs  lib.rs
crates/idle/: Cargo.toml
crates/idle/src/: lib.rs
crates/noop/: Cargo.toml
crates/noop/src/: error.rs
crates/zombie/: Cargo.toml
crates/zombie/src/: error.rs  lib.rs
dev-support/containers/: docker-bake.hcl
dev-support/containers/alpine/: Containerfile
devshell/: container.nix  default.nix  format.nix  integration-test.nix  package.nix
ocelot/: Cargo.toml
ocelot/src/: cli.rs  error.rs  main.rs
tests/: test-entry.sh
