[workspace.package]
version = "0.1.0"
authors = ["xrelkd <46590321+xrelkd@users.noreply.github.com>"]
homepage = "https://github.com/xrelkd/ocelot"
repository = "https://github.com/xrelkd/ocelot"
readme = "README.md"
license = "GPL-3.0-only"
edition = "2024"
rust-version = "1.92"
description = "Process supervisor and init system written in Rust Programming Language"
categories = ["command-line-utilities", "development-tools"]
keywords = [
  "supervisor",
  "init",
  "kubernetes",
  "zombie-reaper",
  "process-management",
]

[workspace.metadata.crane]
name = "ocelot"

[workspace]
resolver = "2"
members  = ["ocelot", "crates/idle"]

[workspace.dependencies]
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

futures = "0.3"
tokio = { version = "1", features = [
  "fs",
  "io-std",
  "macros",
  "rt-multi-thread",
  "sync",
  "process",
] }

clap          = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
exitcode      = "1"
nix           = { version = "0.31", features = ["signal", "process"] }
shadow-rs     = "1.7"
signal-hook   = "0.4"
snafu         = "0.9"

ocelot-idle = { path = "./crates/idle" }

[workspace.lints.rust]
async_fn_in_trait = "allow"

# TODO: deny `unused_crate_dependencies` after https://github.com/rust-lang/rust/issues/95513 being solved
unused_crate_dependencies = "allow"

unknown_lints     = "warn"
unstable_features = "warn"

absolute_paths_not_starting_with_crate  = "deny"
deprecated_in_future                    = "deny"
elided_lifetimes_in_paths               = "deny"
explicit_outlives_requirements          = "deny"
ffi_unwind_calls                        = "deny"
keyword_idents                          = { level = "deny", priority = -1 }
let_underscore_drop                     = "deny"
macro_use_extern_crate                  = "deny"
meta_variable_misuse                    = "deny"
missing_abi                             = "deny"
non_ascii_idents                        = "deny"
rust_2021_incompatible_closure_captures = "deny"
rust_2021_incompatible_or_patterns      = "deny"
rust_2021_prefixes_incompatible_syntax  = "deny"
rust_2021_prelude_collisions            = "deny"
single_use_lifetimes                    = "deny"
trivial_casts                           = "deny"
trivial_numeric_casts                   = "deny"
unsafe_code                             = "deny"
unsafe_op_in_unsafe_fn                  = "deny"
unused_extern_crates                    = "deny"
unused_import_braces                    = "deny"
unused_lifetimes                        = "deny"
unused_macro_rules                      = "deny"
unused_qualifications                   = "deny"
unused_results                          = "deny"
variant_size_differences                = "deny"

ambiguous_glob_imports                  = "deny"
ambiguous_glob_reexports                = "deny"
anonymous_parameters                    = "deny"
array_into_iter                         = "deny"
asm_sub_register                        = "deny"
bad_asm_style                           = "deny"
bare_trait_objects                      = "deny"
break_with_label_and_loop               = "deny"
clashing_extern_declarations            = "deny"
coherence_leak_check                    = "deny"
confusable_idents                       = "deny"
const_evaluatable_unchecked             = "deny"
const_item_mutation                     = "deny"
dangling_pointers_from_temporaries      = "deny"
dead_code                               = "deny"
deprecated                              = "deny"
deprecated_where_clause_location        = "deny"
deref_into_dyn_supertrait               = "deny"
deref_nullptr                           = "deny"
drop_bounds                             = "deny"
dropping_copy_types                     = "deny"
dropping_references                     = "deny"
duplicate_macro_attributes              = "deny"
dyn_drop                                = "deny"
elided_lifetimes_in_associated_constant = "deny"
ellipsis_inclusive_range_patterns       = "deny"
exported_private_dependencies           = "deny"
for_loops_over_fallibles                = "deny"
forbidden_lint_groups                   = "deny"
forgetting_copy_types                   = "deny"
forgetting_references                   = "deny"
function_item_references                = "deny"
hidden_glob_reexports                   = "deny"
improper_ctypes                         = "deny"
improper_ctypes_definitions             = "deny"
incomplete_features                     = "deny"
inline_no_sanitize                      = "deny"
internal_features                       = "deny"
invalid_doc_attributes                  = "deny"
invalid_from_utf8                       = "deny"
invalid_macro_export_arguments          = "deny"
invalid_nan_comparisons                 = "deny"
invalid_value                           = "deny"
irrefutable_let_patterns                = "deny"
large_assignments                       = "deny"
late_bound_lifetime_arguments           = "deny"
legacy_derive_helpers                   = "deny"
map_unit_fn                             = "deny"
mixed_script_confusables                = "deny"
named_arguments_used_positionally       = "deny"
no_mangle_generic_items                 = "deny"
non_camel_case_types                    = "deny"
non_fmt_panics                          = "deny"
non_shorthand_field_patterns            = "deny"
non_snake_case                          = "deny"
non_upper_case_globals                  = "deny"
noop_method_call                        = "deny"
opaque_hidden_inferred_bound            = "deny"
overlapping_range_endpoints             = "deny"
path_statements                         = "deny"
private_bounds                          = "deny"
private_interfaces                      = "deny"
redundant_semicolons                    = "deny"
refining_impl_trait                     = { level = "deny", priority = -1 }
renamed_and_removed_lints               = "deny"
repr_transparent_non_zst_fields         = "deny"
semicolon_in_expressions_from_macros    = "deny"
special_module_name                     = "deny"
stable_features                         = "deny"
suspicious_double_ref_op                = "deny"
trivial_bounds                          = "deny"
type_alias_bounds                       = "deny"
tyvar_behind_raw_pointer                = "deny"
uncommon_codepoints                     = "deny"
unconditional_recursion                 = "deny"
unexpected_cfgs                         = "deny"
ungated_async_fn_track_caller           = "deny"
uninhabited_static                      = "deny"
unnameable_test_items                   = "deny"
unreachable_code                        = "deny"
unreachable_patterns                    = "deny"
unstable_name_collisions                = "deny"
unstable_syntax_pre_expansion           = "deny"
unused_allocation                       = "deny"
unused_assignments                      = "deny"
unused_associated_type_bounds           = "deny"
unused_attributes                       = "deny"
unused_braces                           = "deny"
unused_comparisons                      = "deny"
unused_doc_comments                     = "deny"
unused_features                         = "deny"
unused_imports                          = "deny"
unused_labels                           = "deny"
unused_macros                           = "deny"
unused_must_use                         = "deny"
unused_mut                              = "deny"
unused_parens                           = "deny"
unused_unsafe                           = "deny"
unused_variables                        = "deny"
useless_ptr_null_checks                 = "deny"
while_true                              = "deny"

[workspace.lints.clippy]
module_name_repetitions = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }

all      = "deny"
cargo    = "deny"
nursery  = "deny"
pedantic = "deny"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0
