[package]
name                   = "ocelot"
description            = "Process supervisor and init system written in Rust Programming Language"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
serde      = { workspace = true }
serde_yaml = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

tokio = { workspace = true }

clap          = { workspace = true }
clap_complete = { workspace = true }
shadow-rs     = { workspace = true }
snafu         = { workspace = true }

ocelot-idle = { path = "../crates/idle" }

[build-dependencies]
shadow-rs = { workspace = true }

[lints]
workspace = true
