[package]
name                   = "ocelot-entry"
description            = "Spawns a child process and manages its lifecycle as a minimal init system."
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
tracing = { workspace = true }

nix         = { workspace = true }
signal-hook = { workspace = true }
snafu       = { workspace = true }

[lints]
workspace = true
